[gd_scene load_steps=6 format=2]

[ext_resource path="res://data/images/items/doubledamage.png" type="Texture" id=1]
[ext_resource path="res://powerups/doubledamage.gd" type="Script" id=2]
[ext_resource path="res://data/images/lights/spot.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30.3714, 30.4503 )

[sub_resource type="Animation" id=2]
resource_name = "Rotate"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Light2D2:energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 3.0, 0.0, 3.0 ]
}

[node name="DoubleDamage" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )

[node name="EffectTimer" type="Timer" parent="."]
wait_time = 30.0

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="Light2D" type="Light2D" parent="."]
light_mask = 2
texture = ExtResource( 3 )
color = Color( 0.321569, 1, 0.968627, 1 )
energy = 2.5
range_item_cull_mask = 2
shadow_item_cull_mask = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Rotate = SubResource( 2 )

[node name="Light2D2" type="Light2D" parent="."]
light_mask = 2
texture = ExtResource( 3 )
energy = 3.0
range_item_cull_mask = 2
shadow_item_cull_mask = 2
[connection signal="body_entered" from="." to="." method="_on_FireRatePowerUp_body_entered"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
